--- a/manual_setup/Vagrantfile
+++ b/manual_setup/Vagrantfile
@@ -3,5 +3,9 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "precise32"
   config.vm.box_url = "http://files.vagrantup.com/precise32.box"
-  config.vm.network :forwarded_port, guest: 80, host: 3000
+  config.vm.network :private_network, ip: "192.168.3.10"
+  config.vm.hostname = "sample-app.com"
+  config.vm.provider :virtualbox do |v|
+    v.customize ["modifyvm", :id, "--memory", 1024, "--cpus", "2"]
+  end
 end
